--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3308/mundolog?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://db:3306/mundolog?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=mundolog
+spring.datasource.password=mundolog
