--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-spring.datasource.url=jdbc:mysql://db:3306/mundolog?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://db/mundolog?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=mundolog
 spring.datasource.password=mundolog
+
+spring.devtools.remote.secret=12345
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
